--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "Colombia"
-title                    : "Alejandro Zuluaga Gómez"
+title                    : "About Me"
 title_separator          : "-"
 name                     : &name "Alejandro"
 description              : &description "Environmental engineer, Master in aquatic ecology. With experience in environmental impact studies, monitoring of freshwater aquatic ecosystems, environmental management of infrastructure projects for transportation, power generation and mining, ecological studies about the structure of aquatic communities and their interactions in continental ecosystems. Software Management for the statistical processing of ecological data (Statists, Biodiversity pro, Primer, R, Past, Excel, Canuco, Matlab) and geographic information such as QGIS. Lee writes, speaks in Portuguese (certified by Celpe-Bras), Lee writes in English. He is currently working on research on trophic interactions and relations with primary production sources in lotic ecosystems in the Amazon region of Brazil and trans-Andean ecosystems such as the Magdalena River in Colombia, using nuclear tools (stable isotopes); for the evaluation of environmental impacts in civil constructions and measures of conservation status and recovery of impacted ecosystems. Analysis of ecosystem services and economic impact assessment. Colombian environmental legislation"
@@ -56,7 +56,7 @@ alexa_site_verification  :
 yandex_site_verification :
 
 # Social Sharing
-twitter:
+twitter: https://twitter.com/Alejo_Zeta_G
   username               : &twitter
 facebook:
   username               :
