--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 locale                   : "Colombia"
 title                    : "About Me"
 title_separator          : "-"
-name                     : &name "Alejandro"
+name                     : &name "Alejandro Zuluaga-Gómez"
 description              : &description "Environmental engineer, Master in aquatic ecology. With experience in environmental impact studies, monitoring of freshwater aquatic ecosystems, environmental management of infrastructure projects for transportation, power generation and mining, ecological studies about the structure of aquatic communities and their interactions in continental ecosystems. Software Management for the statistical processing of ecological data (Statists, Biodiversity pro, Primer, R, Past, Excel, Canuco, Matlab) and geographic information such as QGIS. Lee writes, speaks in Portuguese (certified by Celpe-Bras), Lee writes in English. He is currently working on research on trophic interactions and relations with primary production sources in lotic ecosystems in the Amazon region of Brazil and trans-Andean ecosystems such as the Magdalena River in Colombia, using nuclear tools (stable isotopes); for the evaluation of environmental impacts in civil constructions and measures of conservation status and recovery of impacted ecosystems. Analysis of ecosystem services and economic impact assessment. Colombian environmental legislation"
 url                      : https://Zuluaga-Gomez.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -57,7 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter: https://twitter.com/Alejo_Zeta_G
-  username               : &twitter
+  username               : @Alejo_Zeta_G
 facebook:
   username               :
   app_id                 :
@@ -80,15 +80,15 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Alejandro Zuliuaga-Gómez"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
+  bio              : "PhD Candidate, Amazon Aquatic Ecology Center NEAP - PPGEAP | Federal University of Pará"
+  location         : "Medellin:Colombia - Belem:Brasil "
   employer         :
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
+  googlescholar    : "https://scholar.google.es/citations?user=zYWNWQkAAAAJ&hl=es"
   email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  researchgate     :  "https://www.researchgate.net/profile/Mario-Zuluaga-Gomez"
   uri              :
   bitbucket        :
   codepen          :
@@ -102,14 +102,14 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "https://www.linkedin.com/in/alejandro-zuluaga-g%C3%B3mez-431822a0/"
+  orcid            : "https://orcid.org/0000-0002-6296-2833"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "https://twitter.com/Alejo_Zeta_G"
   vine             :
   weibo            :
   xing             :
