--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/alejandro-zuluaga-g%C3%B3mez-431822a0/"
+  linkedin         : "/in/alejandro-zuluaga-g%C3%B3mez-431822a0/"
   orcid            : "https://orcid.org/0000-0002-6296-2833"
   pinterest        :
   soundcloud       :
