--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Alejandro Zuluaga-Gomez"
+title                    : "About me"
 title_separator          : "-"
 name                     : &name "Alejandro Zuluaga-Gomez"
 description              : &description "PhD Candidate, Amazon Aquatic Ecology Center NEAP - PPGEAP | Federal University of Pará"
