--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "About me"
+title                    : "Alejandro Zuluaga"
 title_separator          : "-"
-name                     : &name "About me"
+name                     : &name "Alejandro Zuluaga"
 description              : &description "PhD Candidate, Amazon Aquatic Ecology Center NEAP - PPGEAP | Federal University of Pará"
 url                      : https://zuluaga-gomez.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
